generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../docs"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model user {
  id                       String               @id
  email                    String               @unique(map: "user_email_unique")
  full_name                String
  birth_date               DateTime?
  pendidikan               pendidikan_enum?
  nama_sekolah             String?
  entry_source             String?
  phone_number             String?
  id_line                  String?
  id_discord               String?
  id_instagram             String?
  is_registration_complete Int                  @default(0) @db.TinyInt
  last_read_announcements_at DateTime?
  jenis_kelamin            jenis_kelamin_enum?
  ktm_key                  String?
  twibbon_key              String?
  created_at               DateTime             @default(now())
  updated_at               DateTime?
  announcements            event_announcement[]
  event_participants       event_participant[]
  media                    media[]
  team_members             team_member[]
  user_feedbacks           user_feedback[]
  identity                 user_identity?
  semnas_participants       semnas_participant[]

  @@map("user")
}

model user_identity {
  id                                 String                      @id
  email                              String                      @unique(map: "user_identity_email_unique")
  provider                           user_identity_provider_enum @default(basic)
  hash                               String?
  is_verified                        Int                         @default(0) @db.TinyInt
  verification_token                 String?
  verification_token_expiration      DateTime?
  password_recovery_token            String?
  password_recovery_token_expiration DateTime?
  refresh_token                      String?
  role                               user_identity_role          @default(user)
  remember_token                     String?                     @db.VarChar(100)
  created_at                         DateTime                    @default(now())
  updated_at                         DateTime?
  event_staff                        event_staff[]
  user                               user                        @relation(fields: [id], references: [id], map: "user_identity_id_foreign")

  @@map("user_identity")
}

model password_reset_tokens {
  email      String    @id
  token      String
  created_at DateTime? @db.Timestamp(0)

  @@map("password_reset_tokens")
}

model sessions {
  id            String  @id
  user_id       String?
  ip_address    String? @db.VarChar(45)
  user_agent    String? @db.Text
  payload       String  @db.LongText
  last_activity Int

  @@index([last_activity], map: "sessions_last_activity_index")
  @@index([user_id], map: "sessions_user_id_index")
  @@map("sessions")
}

model event {
  id                             String                   @id
  slug                           String?                  @unique(map: "event_slug_unique") @db.VarChar(255)
  title                          String                   @db.Text
  description                    String?                  @db.Text
  guide_book_url                 String?                  @db.Text
  type                           event_type_enum
  participation_type             String                   @default("team") @db.VarChar(255)
  is_active                      Boolean                  @default(true)
  requires_submission            Boolean                  @default(false)
  submission_fields              Json?
  price                          Int                      @default(0)
  contact_person1                String?
  contact_person2                String?
  max_noncompetition_participant Int?
  max_member                     Int                      @default(3)
  whatsapp_group_link            String?                  @db.VarChar(255)
  finalist_timeline_id           String?                  @db.VarChar(36)
  winner_timeline_id             String?                  @db.VarChar(36)
  external_platform_link         String?                  @db.VarChar(255)
  logo_url                       String?                  @db.VarChar(255)
  method                         String                   @default("offline") @db.VarChar(255)
  submissions                    competition_submission[]
  announcements                  event_announcement[]
  participants                   event_participant[]
  staff                          event_staff[]
  timelines                      event_timeline[]
  teams                          team[]
  semnas_participants            semnas_participant[]

  @@map("event")
}

model media {
  id                String               @id
  uploader_id       String
  name              String               @unique(map: "media_name_unique")
  grouping          media_grouping_enum?
  type              media_type_enum
  url               String
  created_at        DateTime             @default(now())
  updated_at        DateTime             @default(now())
  uploader          user                 @relation(fields: [uploader_id], references: [id], map: "media_uploader_id_foreign")
  team_payment      team[]               @relation("PaymentProof")
  team_member_kartu team_member[]

  @@index([uploader_id], map: "media_uploader_id_foreign")
  @@map("media")
}

model team {
  id                   String                     @id
  competition_id       String
  team_name            String                     @db.Text
  team_code            String                     @unique(map: "team_team_code_unique")
  max_member           Int                        @default(3)
  is_document_verified document_verification_enum @default(pending)
  is_verified          document_verification_enum @default(pending)
  is_finalist          Boolean                    @default(false)
  rank                 Int?
  is_name_changed      Boolean                    @default(false)
  previous_team_name   String?                    @db.Text
  name_changed_at      DateTime?
  verification_error   String?                    @db.Text
  has_bootcamp_addon   Boolean                    @default(false)
  created_at           DateTime                   @default(now())
  updated_at           DateTime?
  payment_proof_id     String?
  submissions          competition_submission[]
  competition          event                      @relation(fields: [competition_id], references: [id], map: "team_competition_id_foreign")
  payment_proof        media?                     @relation("PaymentProof", fields: [payment_proof_id], references: [id], map: "team_payment_proof_id_foreign")
  members              team_member[]

  @@index([competition_id], map: "team_competition_id_foreign")
  @@index([payment_proof_id], map: "team_payment_proof_id_foreign")
  @@map("team")
}


model team_member {
  user_id            String
  team_id            String
  role               team_member_role_enum
  is_verified        Boolean               @default(false)
  verification_error String?               @db.Text
  kartu_id           String?
  kartu              media?                @relation(fields: [kartu_id], references: [id], map: "team_member_kartu_id_foreign")
  team               team                  @relation(fields: [team_id], references: [id], map: "team_member_team_id_foreign")
  user               user                  @relation(fields: [user_id], references: [id], map: "team_member_user_id_foreign")

  @@id([user_id, team_id])
  @@index([kartu_id], map: "team_member_kartu_id_foreign")
  @@index([team_id], map: "team_member_team_id_foreign")
  @@map("team_member")
}

model event_timeline {
  id       String    @id
  event_id String
  title         String    @db.Text
  date          DateTime
  end_date      DateTime?
  is_submission Boolean   @default(false)
  is_registration Boolean @default(false)
  event         event     @relation(fields: [event_id], references: [id], map: "event_timeline_event_id_foreign")

  @@index([event_id], map: "event_timeline_event_id_foreign")
  @@map("event_timeline")
}

model event_announcement {
  id          String   @id
  event_id    String?
  author_id   String
  title       String   @db.Text
  description String   @db.Text
  is_pinned   Boolean  @default(false)
  priority    Int      @default(0)
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
  author      user     @relation(fields: [author_id], references: [id], map: "event_announcement_author_id_foreign")
  event       event?   @relation(fields: [event_id], references: [id], onDelete: Restrict, map: "event_announcement_event_id_foreign")

  @@index([author_id], map: "event_announcement_author_id_foreign")
  @@index([event_id], map: "event_announcement_event_id_foreign")
  @@map("event_announcement")
}

model user_feedback {
  id         String   @id
  user_id    String
  subject    String   @db.VarChar(191)
  content    String   @db.Text
  media_urls Json?
  status     String   @default("pending") @db.VarChar(50)
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  user       user     @relation(fields: [user_id], references: [id], onDelete: Cascade, map: "user_feedback_user_id_foreign")

  @@index([user_id], map: "user_feedback_user_id_foreign")
  @@map("user_feedback")
}

model competition_submission {
  team_id           String
  competition_id    String
  created_at        DateTime  @default(now())
  updated_at        DateTime?
  submission_object Json?
  competition       event     @relation(fields: [competition_id], references: [id], map: "competition_submission_competition_id_foreign")
  team              team      @relation(fields: [team_id], references: [id], map: "competition_submission_team_id_foreign")

  @@id([team_id, competition_id])
  @@index([competition_id], map: "competition_submission_competition_id_foreign")
  @@map("competition_submission")
}

model event_participant {
  user_id              String
  event_id             String
  date_added           DateTime                  @default(now())
  payment_proof        String?
  payment_verification payment_verification_enum @default(pending)
  event                event                     @relation(fields: [event_id], references: [id], map: "event_participant_event_id_foreign")
  user                 user                      @relation(fields: [user_id], references: [id], map: "event_participant_user_id_foreign")

  @@id([user_id, event_id])
  @@index([event_id], map: "event_participant_event_id_foreign")
  @@map("event_participant")
}

model event_staff {
  event_id   String
  user_id    String
  created_at DateTime?     @db.Timestamp(0)
  updated_at DateTime?     @db.Timestamp(0)
  event      event         @relation(fields: [event_id], references: [id], onDelete: Cascade, map: "event_staff_event_id_foreign")
  user       user_identity @relation(fields: [user_id], references: [id], onDelete: Cascade, map: "event_staff_user_id_foreign")

  @@id([event_id, user_id])
  @@index([user_id], map: "event_staff_user_id_foreign")
  @@map("event_staff")
}

model cache {
  key        String @id @db.VarChar(255)
  value      String @db.MediumText
  expiration Int

  @@index([expiration], map: "cache_expiration_index")
}

model cache_locks {
  key        String @id @db.VarChar(255)
  owner      String @db.VarChar(255)
  expiration Int

  @@index([expiration], map: "cache_locks_expiration_index")
}

model failed_jobs {
  id         BigInt   @id @default(autoincrement()) @db.UnsignedBigInt
  uuid       String   @unique(map: "failed_jobs_uuid_unique") @db.VarChar(255)
  connection String   @db.Text
  queue      String   @db.Text
  payload    String   @db.LongText
  exception  String   @db.LongText
  failed_at  DateTime @default(now()) @db.Timestamp(0)
}

model job_batches {
  id             String  @id @db.VarChar(255)
  name           String  @db.VarChar(255)
  total_jobs     Int
  pending_jobs   Int
  failed_jobs    Int
  failed_job_ids String  @db.LongText
  options        String? @db.MediumText
  cancelled_at   Int?
  created_at     Int
  finished_at    Int?
}

model jobs {
  id           BigInt @id @default(autoincrement()) @db.UnsignedBigInt
  queue        String @db.VarChar(255)
  payload      String @db.LongText
  attempts     Int    @db.UnsignedTinyInt
  reserved_at  Int?   @db.UnsignedInt
  available_at Int    @db.UnsignedInt
  created_at   Int    @db.UnsignedInt

  @@index([queue], map: "jobs_queue_index")
}

model migrations {
  id        Int    @id @default(autoincrement()) @db.UnsignedInt
  migration String @db.VarChar(255)
  batch     Int
}

model competition_timeline {
  id                    String    @id
  title                 String    @db.Text
  start_date            DateTime
  end_date              DateTime?
  description           String?   @db.Text
  is_registration_batch Boolean   @default(false)
  price                 Int?
  created_at            DateTime? @db.Timestamp(0)
  updated_at            DateTime? @db.Timestamp(0)
}

model semnas_participant {
  id                      String   @id @default(uuid())
  user_id                 String
  event_id                String
  kenal_sentral_komputer  Boolean  @default(false)
  sumber_kenal_sentral    String?  @db.VarChar(255)
  kenal_acer              Boolean  @default(false)
  kenal_nvidia            Boolean  @default(false)
  kenal_microsoft         Boolean  @default(false)
  ig_follow_proof_key     String?  @db.VarChar(255)
  created_at              DateTime @default(now())

  user  user  @relation(fields: [user_id], references: [id], map: "semnas_participant_user_id_foreign")
  event event @relation(fields: [event_id], references: [id], map: "semnas_participant_event_id_foreign")

  @@unique([user_id, event_id])
  @@index([event_id], map: "semnas_participant_event_id_foreign")
  @@map("semnas_participant")
}

model settings {
  key        String    @id @db.VarChar(255)
  value      String?   @db.Text
  created_at DateTime? @db.Timestamp(0)
  updated_at DateTime? @db.Timestamp(0)
}

enum pendidikan_enum {
  sma
  s1
  d3
  d4
}

enum team_member_role_enum {
  leader
  member
}

enum user_identity_provider_enum {
  google
  basic
  github
}

enum payment_verification_enum {
  pending
  accepted
  rejected
}

enum document_verification_enum {
  pending
  approved
  rejected
}

enum media_grouping_enum {
  payments
  dokum_tahun_lalu
  competition_submission
  twibbon
}

enum media_type_enum {
  image
  pdf
}

enum event_type_enum {
  competition
  non_competition
}

enum jenis_kelamin_enum {
  laki2
  perempuan
}

enum user_identity_role {
  superadmin
  admin_biasa
  panitia_lomba
  user
}
