//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  email String [unique, not null]
  full_name String [not null]
  birth_date DateTime
  pendidikan pendidikan_enum
  nama_sekolah String
  entry_source String
  phone_number String
  id_line String
  id_discord String
  id_instagram String
  is_registration_complete Int [not null, default: 0]
  last_read_announcements_at DateTime
  jenis_kelamin jenis_kelamin_enum
  ktm_key String
  twibbon_key String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  announcements event_announcement [not null]
  event_participants event_participant [not null]
  media media [not null]
  team_members team_member [not null]
  user_feedbacks user_feedback [not null]
  identity user_identity
  semnas_participants semnas_participant [not null]
}

Table user_identity {
  id String [pk]
  email String [unique, not null]
  provider user_identity_provider_enum [not null, default: 'basic']
  hash String
  is_verified Int [not null, default: 0]
  verification_token String
  verification_token_expiration DateTime
  password_recovery_token String
  password_recovery_token_expiration DateTime
  refresh_token String
  role user_identity_role [not null, default: 'user']
  remember_token String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  event_staff event_staff [not null]
  user user [not null]
}

Table password_reset_tokens {
  email String [pk]
  token String [not null]
  created_at DateTime
}

Table sessions {
  id String [pk]
  user_id String
  ip_address String
  user_agent String
  payload String [not null]
  last_activity Int [not null]
}

Table event {
  id String [pk]
  slug String [unique]
  title String [not null]
  description String
  guide_book_url String
  type event_type_enum [not null]
  participation_type String [not null, default: 'team']
  is_active Boolean [not null, default: true]
  requires_submission Boolean [not null, default: false]
  submission_fields Json
  price Int [not null, default: 0]
  contact_person1 String
  contact_person2 String
  max_noncompetition_participant Int
  max_member Int [not null, default: 3]
  whatsapp_group_link String
  finalist_timeline_id String
  winner_timeline_id String
  external_platform_link String
  logo_url String
  method String [not null, default: 'offline']
  submissions competition_submission [not null]
  announcements event_announcement [not null]
  participants event_participant [not null]
  staff event_staff [not null]
  timelines event_timeline [not null]
  teams team [not null]
  semnas_participants semnas_participant [not null]
}

Table media {
  id String [pk]
  uploader_id String [not null]
  name String [unique, not null]
  grouping media_grouping_enum
  type media_type_enum [not null]
  url String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  uploader user [not null]
  team_payment team [not null]
  team_member_kartu team_member [not null]
}

Table team {
  id String [pk]
  competition_id String [not null]
  team_name String [not null]
  team_code String [unique, not null]
  max_member Int [not null, default: 3]
  is_document_verified document_verification_enum [not null, default: 'pending']
  is_verified document_verification_enum [not null, default: 'pending']
  is_finalist Boolean [not null, default: false]
  rank Int
  is_name_changed Boolean [not null, default: false]
  previous_team_name String
  name_changed_at DateTime
  verification_error String
  has_bootcamp_addon Boolean [not null, default: false]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  payment_proof_id String
  submissions competition_submission [not null]
  competition event [not null]
  payment_proof media
  members team_member [not null]
}

Table team_member {
  user_id String [not null]
  team_id String [not null]
  role team_member_role_enum [not null]
  is_verified Boolean [not null, default: false]
  verification_error String
  kartu_id String
  kartu media
  team team [not null]
  user user [not null]

  indexes {
    (user_id, team_id) [pk]
  }
}

Table event_timeline {
  id String [pk]
  event_id String [not null]
  title String [not null]
  date DateTime [not null]
  end_date DateTime
  is_submission Boolean [not null, default: false]
  is_registration Boolean [not null, default: false]
  event event [not null]
}

Table event_announcement {
  id String [pk]
  event_id String
  author_id String [not null]
  title String [not null]
  description String [not null]
  is_pinned Boolean [not null, default: false]
  priority Int [not null, default: 0]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  author user [not null]
  event event
}

Table user_feedback {
  id String [pk]
  user_id String [not null]
  subject String [not null]
  content String [not null]
  media_urls Json
  status String [not null, default: 'pending']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  user user [not null]
}

Table competition_submission {
  team_id String [not null]
  competition_id String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  submission_object Json
  competition event [not null]
  team team [not null]

  indexes {
    (team_id, competition_id) [pk]
  }
}

Table event_participant {
  user_id String [not null]
  event_id String [not null]
  date_added DateTime [default: `now()`, not null]
  payment_proof String
  payment_verification payment_verification_enum [not null, default: 'pending']
  event event [not null]
  user user [not null]

  indexes {
    (user_id, event_id) [pk]
  }
}

Table event_staff {
  event_id String [not null]
  user_id String [not null]
  created_at DateTime
  updated_at DateTime
  event event [not null]
  user user_identity [not null]

  indexes {
    (event_id, user_id) [pk]
  }
}

Table cache {
  key String [pk]
  value String [not null]
  expiration Int [not null]
}

Table cache_locks {
  key String [pk]
  owner String [not null]
  expiration Int [not null]
}

Table failed_jobs {
  id BigInt [pk, increment]
  uuid String [unique, not null]
  connection String [not null]
  queue String [not null]
  payload String [not null]
  exception String [not null]
  failed_at DateTime [default: `now()`, not null]
}

Table job_batches {
  id String [pk]
  name String [not null]
  total_jobs Int [not null]
  pending_jobs Int [not null]
  failed_jobs Int [not null]
  failed_job_ids String [not null]
  options String
  cancelled_at Int
  created_at Int [not null]
  finished_at Int
}

Table jobs {
  id BigInt [pk, increment]
  queue String [not null]
  payload String [not null]
  attempts Int [not null]
  reserved_at Int
  available_at Int [not null]
  created_at Int [not null]
}

Table migrations {
  id Int [pk, increment]
  migration String [not null]
  batch Int [not null]
}

Table competition_timeline {
  id String [pk]
  title String [not null]
  start_date DateTime [not null]
  end_date DateTime
  description String
  is_registration_batch Boolean [not null, default: false]
  price Int
  created_at DateTime
  updated_at DateTime
}

Table semnas_participant {
  id String [pk]
  user_id String [not null]
  event_id String [not null]
  kenal_sentral_komputer Boolean [not null, default: false]
  sumber_kenal_sentral String
  kenal_acer Boolean [not null, default: false]
  kenal_nvidia Boolean [not null, default: false]
  kenal_microsoft Boolean [not null, default: false]
  ig_follow_proof_key String
  created_at DateTime [default: `now()`, not null]
  user user [not null]
  event event [not null]

  indexes {
    (user_id, event_id) [unique]
  }
}

Table settings {
  key String [pk]
  value String
  created_at DateTime
  updated_at DateTime
}

Enum pendidikan_enum {
  sma
  s1
  d3
  d4
}

Enum team_member_role_enum {
  leader
  member
}

Enum user_identity_provider_enum {
  google
  basic
  github
}

Enum payment_verification_enum {
  pending
  accepted
  rejected
}

Enum document_verification_enum {
  pending
  approved
  rejected
}

Enum media_grouping_enum {
  payments
  dokum_tahun_lalu
  competition_submission
  twibbon
}

Enum media_type_enum {
  image
  pdf
}

Enum event_type_enum {
  competition
  non_competition
}

Enum jenis_kelamin_enum {
  laki2
  perempuan
}

Enum user_identity_role {
  superadmin
  admin_biasa
  panitia_lomba
  user
}

Ref: user_identity.id - user.id

Ref: media.uploader_id > user.id

Ref: team.competition_id > event.id

Ref: team.payment_proof_id > media.id

Ref: team_member.kartu_id > media.id

Ref: team_member.team_id > team.id

Ref: team_member.user_id > user.id

Ref: event_timeline.event_id > event.id

Ref: event_announcement.author_id > user.id

Ref: event_announcement.event_id > event.id [delete: Restrict]

Ref: user_feedback.user_id > user.id [delete: Cascade]

Ref: competition_submission.competition_id > event.id

Ref: competition_submission.team_id > team.id

Ref: event_participant.event_id > event.id

Ref: event_participant.user_id > user.id

Ref: event_staff.event_id > event.id [delete: Cascade]

Ref: event_staff.user_id > user_identity.id [delete: Cascade]

Ref: semnas_participant.user_id > user.id

Ref: semnas_participant.event_id > event.id